Bug 779269 - Implement a TryMerge method for nsDisplayFixedPosition. r=roc

Allow nsDisplayFixedPosition items that share the same fixed-pos frame to be
merged. This avoids a bug where the Google PDF viewer document image gets
re-rendered offset on the initial frame of a scroll when layer acceleration is
enabled.